--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,14 +7,25 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-emerald-400: oklch(76.5% 0.177 163.223);
-    --color-gray-900: oklch(21% 0.034 264.665);
     --color-white: #fff;
-    --text-4xl: 2.25rem;
-    --text-4xl--line-height: calc(2.5 / 2.25);
+    --spacing: 0.25rem;
+    --font-weight-medium: 500;
+    --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --tracking-normal: 0em;
+    --ease-in: cubic-bezier(0.4, 0, 1, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --color-primary: #F58A07;
+    --color-lightPrimary: #f58a071a;
+    --color-secondary: #1D3444;
+    --color-gray: #5B5B5B;
+    --color-midGray: #9C9C9C;
+    --color-blueBlack: #0D1317;
+    --color-db: #063255;
+    --color-db-30: #0632554d;
+    --color-sb: #DCEAF5;
+    --color-sb2: #EDF7FF;
   }
 }
 @layer base {
@@ -166,44 +177,692 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .relative {
+    position: relative;
+  }
+  .right-\[12\.5vw\] {
+    right: 12.5vw;
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
+  .my-\[0\.833vw\] {
+    margin-block: 0.833vw;
+  }
+  .my-\[1\.667vw\] {
+    margin-block: 1.667vw;
+  }
+  .mt-\[0\.833vw\] {
+    margin-top: 0.833vw;
+  }
+  .mt-\[1\.25vw\] {
+    margin-top: 1.25vw;
+  }
+  .mt-\[1\.406vw\] {
+    margin-top: 1.406vw;
+  }
+  .mt-\[1\.458vw\] {
+    margin-top: 1.458vw;
+  }
+  .mt-\[1\.667vw\] {
+    margin-top: 1.667vw;
+  }
+  .mt-\[2\.917vw\] {
+    margin-top: 2.917vw;
+  }
+  .mt-\[3\.333vw\] {
+    margin-top: 3.333vw;
+  }
+  .mt-\[3\.542vw\] {
+    margin-top: 3.542vw;
+  }
+  .mb-\[0\.521vw\] {
+    margin-bottom: 0.521vw;
+  }
+  .mb-\[0\.833vw\] {
+    margin-bottom: 0.833vw;
+  }
+  .mb-\[0\.885vw\] {
+    margin-bottom: 0.885vw;
+  }
+  .mb-\[0\.938vw\] {
+    margin-bottom: 0.938vw;
+  }
+  .mb-\[1\.25vw\] {
+    margin-bottom: 1.25vw;
+  }
+  .mb-\[1\.302vw\] {
+    margin-bottom: 1.302vw;
+  }
+  .mb-\[1\.667vw\] {
+    margin-bottom: 1.667vw;
+  }
+  .mb-\[1\.719vw\] {
+    margin-bottom: 1.719vw;
+  }
+  .mb-\[2\.5vw\] {
+    margin-bottom: 2.5vw;
+  }
+  .mb-\[2\.24vw\] {
+    margin-bottom: 2.24vw;
+  }
+  .mb-\[2\.083vw\] {
+    margin-bottom: 2.083vw;
+  }
+  .mb-\[3\.333vw\] {
+    margin-bottom: 3.333vw;
+  }
+  .mb-\[5vw\] {
+    margin-bottom: 5vw;
+  }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
   }
-  .min-h-screen {
-    min-height: 100vh;
+  .inline-flex {
+    display: inline-flex;
+  }
+  .h-\[12\.604vw\] {
+    height: 12.604vw;
+  }
+  .w-\[1\.25vw\] {
+    width: 1.25vw;
+  }
+  .w-\[1\.146vw\] {
+    width: 1.146vw;
+  }
+  .w-\[2\.135vw\] {
+    width: 2.135vw;
+  }
+  .w-\[4\.167vw\] {
+    width: 4.167vw;
+  }
+  .w-\[6\.25vw\] {
+    width: 6.25vw;
+  }
+  .w-\[6\.354vw\] {
+    width: 6.354vw;
+  }
+  .w-\[6\.979vw\] {
+    width: 6.979vw;
+  }
+  .w-\[7\.292vw\] {
+    width: 7.292vw;
+  }
+  .w-\[7\.448vw\] {
+    width: 7.448vw;
+  }
+  .w-\[13\.75vw\] {
+    width: 13.75vw;
+  }
+  .w-\[17\.813vw\] {
+    width: 17.813vw;
+  }
+  .w-\[18\.281vw\] {
+    width: 18.281vw;
+  }
+  .w-\[20\.833vw\] {
+    width: 20.833vw;
+  }
+  .w-\[20\.885vw\] {
+    width: 20.885vw;
+  }
+  .w-\[24\.583vw\] {
+    width: 24.583vw;
+  }
+  .w-\[26\.563vw\] {
+    width: 26.563vw;
+  }
+  .w-\[28\.646vw\] {
+    width: 28.646vw;
+  }
+  .w-\[29\.792vw\] {
+    width: 29.792vw;
+  }
+  .w-\[30\.677vw\] {
+    width: 30.677vw;
+  }
+  .w-\[31\.51vw\] {
+    width: 31.51vw;
+  }
+  .w-\[32\.292vw\] {
+    width: 32.292vw;
+  }
+  .w-\[33\.177vw\] {
+    width: 33.177vw;
+  }
+  .w-\[38\.281vw\] {
+    width: 38.281vw;
+  }
+  .w-\[45vw\] {
+    width: 45vw;
+  }
+  .w-\[50vw\] {
+    width: 50vw;
+  }
+  .w-\[100\%\] {
+    width: 100%;
+  }
+  .w-full {
+    width: 100%;
+  }
+  .cursor-pointer {
+    cursor: pointer;
   }
   .items-center {
     align-items: center;
   }
-  .justify-center {
-    justify-content: center;
+  .items-end {
+    align-items: flex-end;
   }
-  .bg-gray-900 {
-    background-color: var(--color-gray-900);
+  .items-start {
+    align-items: flex-start;
   }
-  .text-4xl {
-    font-size: var(--text-4xl);
-    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  .justify-between {
+    justify-content: space-between;
+  }
+  .gap-\[0\.417vw\] {
+    gap: 0.417vw;
+  }
+  .gap-\[0\.781vw\] {
+    gap: 0.781vw;
+  }
+  .gap-\[1\.25vw\] {
+    gap: 1.25vw;
+  }
+  .gap-\[1\.042vw\] {
+    gap: 1.042vw;
+  }
+  .gap-\[1\.354vw\] {
+    gap: 1.354vw;
+  }
+  .gap-\[1\.667vw\] {
+    gap: 1.667vw;
+  }
+  .gap-\[1\.979vw\] {
+    gap: 1.979vw;
+  }
+  .gap-\[2\.083vw\] {
+    gap: 2.083vw;
+  }
+  .gap-\[2\.344vw\] {
+    gap: 2.344vw;
+  }
+  .gap-\[2\.448vw\] {
+    gap: 2.448vw;
+  }
+  .gap-\[2\.865vw\] {
+    gap: 2.865vw;
+  }
+  .gap-\[5\.521vw\] {
+    gap: 5.521vw;
+  }
+  .gap-\[5\.729vw\] {
+    gap: 5.729vw;
+  }
+  .overflow-hidden {
+    overflow: hidden;
+  }
+  .rounded-\[1\.042vw\] {
+    border-radius: 1.042vw;
+  }
+  .rounded-full {
+    border-radius: calc(infinity * 1px);
+  }
+  .rounded-b-\[1\.042vw\] {
+    border-bottom-right-radius: 1.042vw;
+    border-bottom-left-radius: 1.042vw;
+  }
+  .border-\[1px\] {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .border-db-30 {
+    border-color: var(--color-db-30);
+  }
+  .border-primary {
+    border-color: var(--color-primary);
+  }
+  .border-white {
+    border-color: var(--color-white);
+  }
+  .bg-db {
+    background-color: var(--color-db);
+  }
+  .bg-lightPrimary {
+    background-color: var(--color-lightPrimary);
+  }
+  .bg-primary {
+    background-color: var(--color-primary);
+  }
+  .bg-sb {
+    background-color: var(--color-sb);
+  }
+  .bg-sb2 {
+    background-color: var(--color-sb2);
+  }
+  .bg-white {
+    background-color: var(--color-white);
+  }
+  .p-\[1\.667vw\] {
+    padding: 1.667vw;
+  }
+  .px-\[1\.25vw\] {
+    padding-inline: 1.25vw;
+  }
+  .px-\[1\.615vw\] {
+    padding-inline: 1.615vw;
+  }
+  .px-\[1\.667vw\] {
+    padding-inline: 1.667vw;
+  }
+  .px-\[16\.667vw\] {
+    padding-inline: 16.667vw;
+  }
+  .py-\[0\.417vw\] {
+    padding-block: 0.417vw;
+  }
+  .py-\[0\.938vw\] {
+    padding-block: 0.938vw;
+  }
+  .py-\[0\.964vw\] {
+    padding-block: 0.964vw;
+  }
+  .py-\[1\.458vw\] {
+    padding-block: 1.458vw;
+  }
+  .py-\[2\.5vw\] {
+    padding-block: 2.5vw;
+  }
+  .py-\[5vw\] {
+    padding-block: 5vw;
+  }
+  .py-\[6\.667vw\] {
+    padding-block: 6.667vw;
+  }
+  .pt-\[0\.99vw\] {
+    padding-top: 0.99vw;
+  }
+  .pt-\[0\.885vw\] {
+    padding-top: 0.885vw;
+  }
+  .pt-\[0\.938vw\] {
+    padding-top: 0.938vw;
+  }
+  .pt-\[2\.5vw\] {
+    padding-top: 2.5vw;
+  }
+  .pt-\[4\.115vw\] {
+    padding-top: 4.115vw;
+  }
+  .pt-\[5\.156vw\] {
+    padding-top: 5.156vw;
+  }
+  .pt-\[6\.094vw\] {
+    padding-top: 6.094vw;
+  }
+  .pr-\[1\.354vw\] {
+    padding-right: 1.354vw;
+  }
+  .pr-\[2\.208vw\] {
+    padding-right: 2.208vw;
+  }
+  .pr-\[15\.625vw\] {
+    padding-right: 15.625vw;
+  }
+  .pr-\[53\.203vw\] {
+    padding-right: 53.203vw;
+  }
+  .pb-\[0\.885vw\] {
+    padding-bottom: 0.885vw;
+  }
+  .pb-\[0\.938vw\] {
+    padding-bottom: 0.938vw;
+  }
+  .pb-\[1\.927vw\] {
+    padding-bottom: 1.927vw;
+  }
+  .pb-\[5\.063vw\] {
+    padding-bottom: 5.063vw;
+  }
+  .pb-\[6\.667vw\] {
+    padding-bottom: 6.667vw;
+  }
+  .pb-\[7\.656vw\] {
+    padding-bottom: 7.656vw;
+  }
+  .pl-\[2\.5vw\] {
+    padding-left: 2.5vw;
+  }
+  .pl-\[2\.031vw\] {
+    padding-left: 2.031vw;
+  }
+  .pl-\[6\.667vw\] {
+    padding-left: 6.667vw;
+  }
+  .pl-\[16\.875vw\] {
+    padding-left: 16.875vw;
+  }
+  .text-\[0\.833vw\] {
+    font-size: 0.833vw;
+  }
+  .text-\[0\.938vw\] {
+    font-size: 0.938vw;
+  }
+  .text-\[1\.25vw\] {
+    font-size: 1.25vw;
+  }
+  .text-\[1\.875vw\] {
+    font-size: 1.875vw;
+  }
+  .text-\[2\.5vw\] {
+    font-size: 2.5vw;
+  }
+  .text-\[2\.969vw\] {
+    font-size: 2.969vw;
+  }
+  .leading-\[1\.1\] {
+    --tw-leading: 1.1;
+    line-height: 1.1;
+  }
+  .leading-\[1\.2\] {
+    --tw-leading: 1.2;
+    line-height: 1.2;
+  }
+  .leading-\[1\.3\] {
+    --tw-leading: 1.3;
+    line-height: 1.3;
+  }
+  .leading-\[1\.4\] {
+    --tw-leading: 1.4;
+    line-height: 1.4;
+  }
+  .leading-\[1\.5\] {
+    --tw-leading: 1.5;
+    line-height: 1.5;
+  }
+  .leading-\[1\.7\] {
+    --tw-leading: 1.7;
+    line-height: 1.7;
+  }
+  .leading-\[1\] {
+    --tw-leading: 1;
+    line-height: 1;
   }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
   }
-  .text-emerald-400 {
-    color: var(--color-emerald-400);
+  .font-medium {
+    --tw-font-weight: var(--font-weight-medium);
+    font-weight: var(--font-weight-medium);
+  }
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
+  }
+  .tracking-normal {
+    --tw-tracking: var(--tracking-normal);
+    letter-spacing: var(--tracking-normal);
+  }
+  .text-blueBlack {
+    color: var(--color-blueBlack);
+  }
+  .text-db {
+    color: var(--color-db);
+  }
+  .text-db-30 {
+    color: var(--color-db-30);
+  }
+  .text-gray {
+    color: var(--color-gray);
+  }
+  .text-midGray {
+    color: var(--color-midGray);
+  }
+  .text-primary {
+    color: var(--color-primary);
+  }
+  .text-secondary {
+    color: var(--color-secondary);
   }
   .text-white {
     color: var(--color-white);
   }
+  .outline-0 {
+    outline-style: var(--tw-outline-style);
+    outline-width: 0px;
+  }
+  .duration-300 {
+    --tw-duration: 300ms;
+    transition-duration: 300ms;
+  }
+  .ease-in {
+    --tw-ease: var(--ease-in);
+    transition-timing-function: var(--ease-in);
+  }
+  .placeholder\:text-midGray {
+    &::placeholder {
+      color: var(--color-midGray);
+    }
+  }
+  .hover\:-translate-y-\[\.25vw\] {
+    &:hover {
+      @media (hover: hover) {
+        --tw-translate-y: calc(.25vw * -1);
+        translate: var(--tw-translate-x) var(--tw-translate-y);
+      }
+    }
+  }
+  .hover\:-translate-y-\[1vw\] {
+    &:hover {
+      @media (hover: hover) {
+        --tw-translate-y: calc(1vw * -1);
+        translate: var(--tw-translate-x) var(--tw-translate-y);
+      }
+    }
+  }
+  .hover\:border-primary {
+    &:hover {
+      @media (hover: hover) {
+        border-color: var(--color-primary);
+      }
+    }
+  }
+  .hover\:bg-lightPrimary {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-lightPrimary);
+      }
+    }
+  }
+  .hover\:bg-primary {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-primary);
+      }
+    }
+  }
+  .hover\:bg-white {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:text-primary {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-primary);
+      }
+    }
+  }
+  .hover\:text-white {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-white);
+      }
+    }
+  }
+}
+body {
+  font-family: "Poppins", sans-serif;
+}
+.txtLine {
+  position: relative;
+  padding-bottom: 1px;
+  transition: all .3s ease-in;
+  color: #394149;
+  &::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    background: #394149;
+    left: 0;
+    bottom: 0;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform .3s ease-in;
+  }
+  &:hover {
+    color: #F58A07;
+    &::before {
+      background: #F58A07;
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+  }
+}
+.txtWhite {
+  color: #fff;
+  &::before {
+    background: #fff;
+  }
+  &:hover {
+    color: #DCEAF5;
+    &::before {
+      background: #DCEAF5;
+    }
+  }
+}
+.db_box {
+  .db_box__img {
+    border-radius: 0.781vw;
+    img {
+      transition: transform .5s ease-in;
+    }
+  }
+  &:hover {
+    .db_box__img {
+      img {
+        transform: scale(1.3);
+      }
+    }
+  }
+}
+.rubberBand {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  animation-iteration-count: 1;
+  display: inline-block;
+  &:hover {
+    animation-name: rubberBand;
+  }
+}
+.rubberAnchor {
+  &:hover {
+    .rubberBand {
+      animation-name: rubberBand;
+    }
+  }
+}
+@keyframes rubberBand {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    transform: scale3d(.95, 1.05, 1);
+  }
+  75% {
+    transform: scale3d(1.05, .95, 1);
+  }
+  to {
+    transform: scale3d(1, 1, 1);
+  }
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-leading {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-font-weight {
   syntax: "*";
   inherits: false;
 }
+@property --tw-tracking {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ease {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-translate-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
+@property --tw-translate-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 0;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
+      --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-tracking: initial;
+      --tw-outline-style: solid;
+      --tw-duration: initial;
+      --tw-ease: initial;
+      --tw-translate-x: 0;
+      --tw-translate-y: 0;
+      --tw-translate-z: 0;
     }
   }
 }
